fix jumping scrollbar issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,15 @@ footer, header, hgroup, main, nav, section, summary {
 }
 
 
+/* Fix for jumping scrollbar: https://aykevl.nl/2014/09/fix-jumping-scrollbar
+-------------------------------------------------- */
+@media screen and (min-width: 35em) {
+    html {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+    }
+}
+
 /* Pix
 -------------------------------------------------- */
 img {
@@ -75,7 +84,8 @@ header {
 .logo {
   display: block;
   font-size: 3em;
-  margin-bottom: 0.5em;
+  line-height: 1em;
+  margin-bottom: 0.25em;
 }
 
 /* Headings
